cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

author:             Lennart Kolmodin
maintainer:         kolmodin@gmail.com

license:            Apache-2.0

library aoclib
    exposed-modules:  Coord, Input
    build-depends:    base ^>=4.15.0.0
    default-language: Haskell2010
    hs-source-dirs:    lib
    ghc-options: -Wall

executable day01
    main-is:          Day01.hs
    build-depends:    base ^>=4.15.0.0
    default-language: Haskell2010

executable day02
    main-is:          Day02.hs
    build-depends:    base ^>=4.15.0.0
    default-language: Haskell2010

executable day03
    main-is:          Day03.hs
    build-depends:    base ^>=4.15.0.0
    default-language: Haskell2010

executable day04
    main-is:          Day04.hs
    build-depends:    base ^>=4.15.0.0, aoclib, array
    default-language: Haskell2010

executable day05
    main-is:          Day05.hs
    build-depends:    base ^>=4.15.0.0, aoclib, containers, array, vector
    default-language: Haskell2010

executable day06
    main-is:          Day06.hs
    build-depends:    base ^>=4.15.0.0, aoclib, containers
    default-language: Haskell2010
    ghc-options: -Wall

